tests/valid/test6.var
var x = 10;
if (x > 3) x = x - 1;
