tests/invalid/test3.var
var x = 3;

if (x > 1) {
    x = x + 1;

// why invalid : Unmatched braces